Manage to use autosummary for scripts

--- a/.gitignore
+++ b/.gitignore
@@ -113,8 +113,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# run.py is used as local script and does not need to be synced
-run.py
+# run* is used as local script and does not need to be synced
+run*
 
 # tmp is used as local temporary log for debugging purposes
 tmp
